--- a/wowslider.html
+++ b/wowslider.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Html5 slider</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Slider for antimivireanul.ml" />
+	<meta name="description" content="Slider for antimivireanul.fr" />
 
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
 	<link rel="stylesheet" type="text/css" href="engine1/style.min.css" />
@@ -17,22 +17,22 @@
 				<div id="wowslider-container1">
 					<div class="ws_images">
 						<ul>
-							<li><img src="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e1.jpg" alt="biserica1" title="biserica1" id="wows1_0"/></li>
+							<li><img src="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e1.jpg" alt="biserica1" title="biserica1" id="wows1_0"/></li>
 						</ul>
 					</div>
 					<div class="ws_bullets">
 						<div>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e1.jpg" title="e1"><span><img src="data1/tooltips/e1.jpg" alt="e1"/>1</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e10.jpg" title="e10"><span>2</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e11.jpg" title="e11"><span>3</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e2.jpg" title="e2"><span>4</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e3.jpg" title="e3"><span>5</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e4.jpg" title="e4"><span>6</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e5.jpg" title="e5"><span>7</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e6.jpg" title="e6"><span>8</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e7.jpg" title="e7"><span>9</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e8.jpg" title="e8"><span>10</span></a>
-							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.ml/data1/images/e9.jpg" title="e9"><span>11</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e1.jpg" title="e1"><span><img src="data1/tooltips/e1.jpg" alt="e1"/>1</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e10.jpg" title="e10"><span>2</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e11.jpg" title="e11"><span>3</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e2.jpg" title="e2"><span>4</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e3.jpg" title="e3"><span>5</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e4.jpg" title="e4"><span>6</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e5.jpg" title="e5"><span>7</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e6.jpg" title="e6"><span>8</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e7.jpg" title="e7"><span>9</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e8.jpg" title="e8"><span>10</span></a>
+							<a href="https://ajgrbeisen.cloudimg.io/cdno/n/webp/https://antimivireanul.fr/data1/images/e9.jpg" title="e9"><span>11</span></a>
 						</div>
 					</div>
 					<div class="ws_script" style="position:absolute;left:-99%; display:none"></div>
