--- a/404.html
+++ b/404.html
@@ -6,24 +6,24 @@
 		<meta name="robots" content="index,nofollow" />
 		<link href="https://purl.org/dc/elements/1.1/" rel="schema.DC">
 		<meta name="dc.title" content="Eroare - Parohia Antim Ivireanul" />
-		<meta name="dc.creator" content="antimivireanul.ml" />
+		<meta name="dc.creator" content="antimivireanul.fr" />
 		<meta name="dc.subject" content="biserica, Pontoise, ortodoxa, Cergy,  Auvers-sur-Oise, Antim Ivireanul, icoane ortodoxe" />
 		<meta name="dc.description" content="Biserica ortodoxă Sfântul Martir Antim Ivireanul, Auvers-sur-Oise, Cergy, Pontoise (departamentul Val-d’Oise, regiunea Île-de-France)." />
-		<meta name="dc.publisher" content="antimivireanul.ml" />
-		<meta name="dc.contributor" content="antimivireanul.ml" />
+		<meta name="dc.publisher" content="antimivireanul.fr" />
+		<meta name="dc.contributor" content="antimivireanul.fr" />
 		<meta name="dc.format" content="text/html">
 		<meta name="dc.language" content="ro-RO" />
-		<meta property="og:url"           content="https://antimivireanul.ml" />
+		<meta property="og:url"           content="https://antimivireanul.fr" />
 		<meta property="og:type"          content="website" />
 		<meta property="og:title"         content="Parohia Antim Ivireanul" />
 		<meta property="og:description"   content="Biserica ortodoxă Sfântul Martir Antim Ivireanul, Auvers-sur-Oise, Cergy, Pontoise (departamentul Val-d’Oise, regiunea Île-de-France)" />
-		<meta property="og:image"         content="https://antimivireanul.ml/pics/biserica3.jpg" />
+		<meta property="og:image"         content="https://antimivireanul.fr/pics/biserica3.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="msvalidate.01" content="3D3345A11DF8AE95539DBBB5214CB654" />
 		<meta name="yandex-verification" content="714cc74750def64c" />
 		<meta name="description" content="Biserica ortodoxă Sfântul Martir Antim Ivireanul, Auvers-sur-Oise, Cergy, Pontoise (departamentul Val-d’Oise, regiunea Île-de-France)" />
 		<meta name="keywords" content="biserica, Pontoise, ortodoxa, Cergy,  Auvers-sur-Oise, Antim Ivireanul, icoane ortodoxe" />
-		<meta name="copyright" content="© 2017 AntimIvireanul.ml"/>
+		<meta name="copyright" content="© 2017 antimivireanul.fr"/>
 		<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
@@ -41,7 +41,7 @@
 		<meta name="msapplication-TileColor" content="#ffffff"/>
 		<meta name="msapplication-TileImage" content="ms-icon-144x144.png"/>
 		<meta name="theme-color" content="#ffffff"/>
-		<link href="https://antimivireanul.ml/404.html" rel="canonical" >
+		<link href="https://antimivireanul.fr/404.html" rel="canonical" >
 		<META HTTP-EQUIV="CONTENT-LANGUAGE" CONTENT="en-US,ro-RO,fr" />
 		<meta http-equiv="cache-control" content="Private,max-age=604800" />
 		<meta http-equiv="last-modified" content="2018-06-17" />
@@ -120,7 +120,7 @@
 				</div>
 				<div class="col-xs-12 col-md-24 adresa">
 					Adresa:<br>24 Rue Simone le Danois, <br>95430 Auvers sur Oise<br>telefon: <a href="tel:0782099958">07.82.09.99.58</a><br><br>
-					<div class="fb-like" data-href="https://antimivireanul.ml" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="true">
+					<div class="fb-like" data-href="https://antimivireanul.fr" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="true">
 					</div>
 				</div>
 			</div>
