--- a/privacy/cookie.html
+++ b/privacy/cookie.html
@@ -10,11 +10,11 @@
   <meta name="robots" content="index" />
   <link href="https://purl.org/dc/elements/1.1/" rel="schema.DC">
   <meta name="dc.title" content="Our Cookies Policy | Parohia Antim Ivireanul" />
-  <meta name="dc.creator" content="antimivireanul.ml/privacy" />
+  <meta name="dc.creator" content="antimivireanul.fr/privacy" />
   <meta name="dc.subject" content="cookies, cookie, biserica, Parohia Antim Ivireanul, Biserica Antim Ivireanul" />
   <meta name="dc.description" content="Politică de cookies - Biserica ortodoxă Sfântul Martir Antim Ivireanul" />
-  <meta name="dc.publisher" content="antimivireanul.ml/privacy" />
-  <meta name="dc.contributor" content="antimivireanul.ml/privacy" />
+  <meta name="dc.publisher" content="antimivireanul.fr/privacy" />
+  <meta name="dc.contributor" content="antimivireanul.fr/privacy" />
   <meta name="dc.date" content="2017-08-07">
   <meta name="dc.type" content="text">
   <meta name="dc.format" content="text/html">
@@ -25,7 +25,7 @@
   <meta name="dc.coverage" content="" />
   <meta name="dc.rights" content="" />
   <meta property="fb:page_id" content="124216468206585" />
-  <meta property="og:url"           content="https://antimivireanul.ml/privacy" />
+  <meta property="og:url"           content="https://antimivireanul.fr/privacy" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Our Cookies Policy | Parohia Antim Ivireanul" />
   <meta property="og:description"   content="Politică de cookies - Biserica ortodoxă Sfântul Martir Antim Ivireanul" />
@@ -34,7 +34,7 @@
   <meta name="yandex-verification" content="714cc74750def64c" />
   <meta name="description" content="Politică de cookies - Biserica ortodoxă Sfântul Martir Antim Ivireanul" />
   <meta name="keywords" content="cookies, cookie, biserica, Parohia Antim Ivireanul, Biserica Antim Ivireanul" />
-  <meta name="copyright" content="© 2017 AntimIvireanul.ml"/>
+  <meta name="copyright" content="© 2017 antimivireanul.fr"/>
   <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
@@ -52,11 +52,11 @@
   <meta name="msapplication-TileColor" content="#ffffff"/>
   <meta name="msapplication-TileImage" content="ms-icon-144x144.png"/>
   <meta name="theme-color" content="#ffffff"/>
-  <link href="https://antimivireanul.ml/privacy" rel="canonical" >
+  <link href="https://antimivireanul.fr/privacy" rel="canonical" >
   <META HTTP-EQUIV="CONTENT-LANGUAGE" CONTENT="en-US,ro-RO,fr" />
   <meta http-equiv="cache-control" content="Private,max-age=604800" />
   <meta http-equiv="last-modified" content="2018-06-12" />
-  <link rel="stylesheet" href="https://antimivireanul.ml/utile/css/all.min.css" type="text/css">
+  <link rel="stylesheet" href="https://antimivireanul.fr/utile/css/all.min.css" type="text/css">
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="51d716d6-d301-46b9-83cb-4bd825bf7bf5" type="text/javascript" async></script>
 </head>
 
@@ -68,20 +68,20 @@
   <div class="container-fluid">
     <div class="row fixedbackground">
       <div class="col-md-5 mob-hidden">
-        <img class="value-img inger_st" src="https://antimivireanul.ml/pics/inger.png">
+        <img class="value-img inger_st" src="https://antimivireanul.fr/pics/inger.png">
       </div>
       <div class="col-md-14">
         <section class="header">
           <div class="head_grad_top">
-            <img class="value-img" id="logo" src="https://antimivireanul.ml/pics/logo.png">
-            <img class="value-img gradtop" src="https://antimivireanul.ml/pics/bg_header.png">
+            <img class="value-img" id="logo" src="https://antimivireanul.fr/pics/logo.png">
+            <img class="value-img gradtop" src="https://antimivireanul.fr/pics/bg_header.png">
             <h1 class="title">Biserica Ortodoxă Sfântul Martir Antim Ivireanul</h1>
-            <img class="value-img gradbottom" src="https://antimivireanul.ml/pics/bg_header.png">
+            <img class="value-img gradbottom" src="https://antimivireanul.fr/pics/bg_header.png">
           </div>
         </section>
       </div>
       <div class="col-md-5 mob-hidden">
-        <img class="value-img inger_dr" src="https://antimivireanul.ml/pics/inger.png">
+        <img class="value-img inger_dr" src="https://antimivireanul.fr/pics/inger.png">
       </div>
     </div>
     <div class="row">
@@ -96,7 +96,7 @@
                 <div class="icemegamenu">
                   <ul id="icemegamenu">
                     <li id="iceMenu_101" class="iceMenuLiLevel_1 active parent">
-                      <a href="https://antimivireanul.ml" class="iceMenuTitle pure-menu-link"><span class="icemega_title icemega_nosubtitle">Biserica</span></a>
+                      <a href="https://antimivireanul.fr" class="iceMenuTitle pure-menu-link"><span class="icemega_title icemega_nosubtitle">Biserica</span></a>
                     </li>
                     <li id="iceMenu_102" class="iceMenuLiLevel_1 parent has-submenu">
                       <a href="#" class="iceMenuTitle pure-menu-link">
@@ -269,12 +269,12 @@
 							<p>Legea stipulează că putem stoca cookie-uri pe dispozitivul dvs., în cazul în care ele sunt strict necesare pentru operarea acestui site. Pentru toate celelalte tipuri de cookie-uri avem nevoie de permisiunea dvs.</p>
 							<p>Acest site utilizează diferite tipuri de cookie-uri. Unele cookie-uri sunt plasate de către servicii părţi terţe care apar pe paginile noastre.</p>
 							<p>Puteți, în orice moment, să modificați sau să vă retrageți acordul din Declarația privind modulele cookie de pe website-ul nostru.</p>
-							<p>Aflați mai multe despre cine suntem, cum ne puteți contacta și cum procesăm datele personale în <a href="https://antimivireanul.ml/privacy/index.html" title="Politica de confidențialitate"><span>Politica de confidențialitate</span></a>.</p>
-							<p>Consimţământul dvs. se aplică următoarelor domenii: antimivireanul.ml</p>
+							<p>Aflați mai multe despre cine suntem, cum ne puteți contacta și cum procesăm datele personale în <a href="https://antimivireanul.fr/privacy/index.html" title="Politica de confidențialitate"><span>Politica de confidențialitate</span></a>.</p>
+							<p>Consimţământul dvs. se aplică următoarelor domenii: antimivireanul.fr</p>
 						<article id="">
               <header><h1>Instrumente folosite</h1></header>
-              <p>Site-ul antimivireanul.ml poate conține legături către alte site-uri și/sau alte pagini web care nu sunt proprietatea Parohia SAINT MARTYR ANTIM IVIREANUL.</p>
-              <p>Site-ul antimivireanul.ml folosește tehnologii si instrumente oferite gratuit de următoarele terțe entități și care folosesc politici de confidențialitate diferite:</p>
+              <p>Site-ul antimivireanul.fr poate conține legături către alte site-uri și/sau alte pagini web care nu sunt proprietatea Parohia SAINT MARTYR ANTIM IVIREANUL.</p>
+              <p>Site-ul antimivireanul.fr folosește tehnologii si instrumente oferite gratuit de următoarele terțe entități și care folosesc politici de confidențialitate diferite:</p>
               <ol>
                 <li>Cookiebot</li>
                     <p style="padding-left:5em">- folosit pentru a gestiona fishierele cookie prin gruparea lor in categorii</p>
@@ -315,9 +315,9 @@
             </article>
             <article id="actual">
               <header><h1>ACTUALIZAREA PREZENTEI POLITICII</h1></header>
-              <p>Vă rugăm să aveți în vedere faptul că prezenta Politică poate face obiectul unor modificări periodice de conținut, prin actualizarea site-ului antimivireanul.ml.</p>
+              <p>Vă rugăm să aveți în vedere faptul că prezenta Politică poate face obiectul unor modificări periodice de conținut, prin actualizarea site-ului antimivireanul.fr.</p>
               <p>Nu vă vom anunța despre modificările aduse acestei Politici pentru că nu deținem și nu prelucrăm date personale.</p>
-              <p>Vă rugăm să nu continuați să utilizați site-ul antimivireanul.ml dacă nu sunteți de acord cu astfel de modificări. De asemenea, vă recomandăm să verificați această pagină pentru orice actualizare.</p>
+              <p>Vă rugăm să nu continuați să utilizați site-ul antimivireanul.fr dacă nu sunteți de acord cu astfel de modificări. De asemenea, vă recomandăm să verificați această pagină pentru orice actualizare.</p>
             </article>
 						<article id="actual">
 							<header><h1>Lista de cookies folosite de site</h1></header>
