--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,11 +10,11 @@
   <meta name="robots" content="index" />
   <link href="https://purl.org/dc/elements/1.1/" rel="schema.DC">
   <meta name="dc.title" content="Our Privacy Policy | Parohia Antim Ivireanul" />
-  <meta name="dc.creator" content="antimivireanul.ml/privacy" />
+  <meta name="dc.creator" content="antimivireanul.fr/privacy" />
   <meta name="dc.subject" content="privacy, confidentialitate, biserica, Parohia Antim Ivireanul, Biserica Antim Ivireanul" />
   <meta name="dc.description" content="Politică de protecția a datelor cu caracter personal - Biserica ortodoxă Sfântul Martir Antim Ivireanul" />
-  <meta name="dc.publisher" content="antimivireanul.ml/privacy" />
-  <meta name="dc.contributor" content="antimivireanul.ml/privacy" />
+  <meta name="dc.publisher" content="antimivireanul.fr/privacy" />
+  <meta name="dc.contributor" content="antimivireanul.fr/privacy" />
   <meta name="dc.date" content="2017-08-07">
   <meta name="dc.type" content="text">
   <meta name="dc.format" content="text/html">
@@ -25,17 +25,17 @@
   <meta name="dc.coverage" content="" />
   <meta name="dc.rights" content="" />
   <meta property="fb:page_id" content="124216468206585" />
-  <meta property="og:url"           content="https://antimivireanul.ml/privacy" />
+  <meta property="og:url"           content="https://antimivireanul.fr/privacy" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Our Privacy Policy | Parohia Antim Ivireanul" />
   <meta property="og:description"   content="Politică de protecția a datelor cu caracter personal - Biserica ortodoxă Sfântul Martir Antim Ivireanul" />
-  <meta property="og:image"         content="https://antimivireanul.ml/pics/biserica3.jpg" />
+  <meta property="og:image"         content="https://antimivireanul.fr/pics/biserica3.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="msvalidate.01" content="3D3345A11DF8AE95539DBBB5214CB654" />
   <meta name="yandex-verification" content="714cc74750def64c" />
   <meta name="description" content="Politică de protecția a datelor cu caracter personal - Biserica ortodoxă Sfântul Martir Antim Ivireanul" />
   <meta name="keywords" content="privacy, confidentialitate, biserica, Parohia Antim Ivireanul, Biserica Antim Ivireanul" />
-  <meta name="copyright" content="© 2017 AntimIvireanul.ml"/>
+  <meta name="copyright" content="© 2017 antimivireanul.fr"/>
   <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
@@ -53,11 +53,11 @@
   <meta name="msapplication-TileColor" content="#ffffff"/>
   <meta name="msapplication-TileImage" content="ms-icon-144x144.png"/>
   <meta name="theme-color" content="#ffffff"/>
-  <link href="https://antimivireanul.ml/privacy" rel="canonical" >
+  <link href="https://antimivireanul.fr/privacy" rel="canonical" >
   <META HTTP-EQUIV="CONTENT-LANGUAGE" CONTENT="en-US,ro-RO,fr" />
   <meta http-equiv="cache-control" content="Private,max-age=604800" />
   <meta http-equiv="last-modified" content="2018-06-12" />
-  <link rel="stylesheet" href="https://antimivireanul.ml/utile/css/all.min.css" type="text/css">
+  <link rel="stylesheet" href="https://antimivireanul.fr/utile/css/all.min.css" type="text/css">
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="51d716d6-d301-46b9-83cb-4bd825bf7bf5" type="text/javascript" data-blockingmode="auto"></script>
 </head>
 
@@ -69,20 +69,20 @@
   <div class="container-fluid">
     <div class="row fixedbackground">
       <div class="col-md-5 mob-hidden">
-        <img class="value-img inger_st" src="https://antimivireanul.ml/pics/inger.png">
+        <img class="value-img inger_st" src="https://antimivireanul.fr/pics/inger.png">
       </div>
       <div class="col-md-14">
         <section class="header">
           <div class="head_grad_top">
-            <img class="value-img" id="logo" src="https://antimivireanul.ml/pics/logo.png">
-            <img class="value-img gradtop" src="https://antimivireanul.ml/pics/bg_header.png">
+            <img class="value-img" id="logo" src="https://antimivireanul.fr/pics/logo.png">
+            <img class="value-img gradtop" src="https://antimivireanul.fr/pics/bg_header.png">
             <h1 class="title">Biserica Ortodoxă Sfântul Martir Antim Ivireanul</h1>
-            <img class="value-img gradbottom" src="https://antimivireanul.ml/pics/bg_header.png">
+            <img class="value-img gradbottom" src="https://antimivireanul.fr/pics/bg_header.png">
           </div>
         </section>
       </div>
       <div class="col-md-5 mob-hidden">
-        <img class="value-img inger_dr" src="https://antimivireanul.ml/pics/inger.png">
+        <img class="value-img inger_dr" src="https://antimivireanul.fr/pics/inger.png">
       </div>
     </div>
     <div class="row">
@@ -97,7 +97,7 @@
                 <div class="icemegamenu">
                   <ul id="icemegamenu">
                     <li id="iceMenu_101" class="iceMenuLiLevel_1 active parent">
-                      <a href="https://antimivireanul.ml" class="iceMenuTitle pure-menu-link"><span class="icemega_title icemega_nosubtitle">Biserica</span></a>
+                      <a href="https://antimivireanul.fr" class="iceMenuTitle pure-menu-link"><span class="icemega_title icemega_nosubtitle">Biserica</span></a>
                     </li>
                     <li id="iceMenu_102" class="iceMenuLiLevel_1 parent has-submenu">
                       <a href="#" class="iceMenuTitle pure-menu-link">
@@ -267,7 +267,7 @@
             <article id="">
                 <header><h1>PROTECȚIA DATELOR CU CARACTER PERSONAL - DPP</h1></header>
                 <p>Noua lege a Uniunii Europene referitoare la protecția datelor cu caracter personal, GDPR (&ldquo;General Data Protection Regulation&rdquo;) a intrat în vigoare pe 25 Mai 2016, dar va începe să-și producă efectele începând cu 25 Mai 2018. Această lege reprezintă cea mai mare schimbare în domeniul protecției datelor cu caracter personal din ultimii 20 de ani și are obiective care trec mult peste simpla protecție a spațiului privat.</p>
-                <p>Protecția datelor dumneavoastră cu caracter personal este importantă pentru noi, prin urmare, acordăm o atenție deosebită protejării vieții private a vizitatorilor care accesează site-ul antimivireanul.ml, în conformitate cu Regulamentul (UE) 2016/679 al Parlamentului European și al Consiliului din data de 27 aprilie 2016 privind protecția persoanelor fizice în ceea ce privește prelucrarea datelor cu caracter personal și libera circulație a acestor date (denumit în continuare &ldquo;GDPR&rdquo;).</p>
+                <p>Protecția datelor dumneavoastră cu caracter personal este importantă pentru noi, prin urmare, acordăm o atenție deosebită protejării vieții private a vizitatorilor care accesează site-ul antimivireanul.fr, în conformitate cu Regulamentul (UE) 2016/679 al Parlamentului European și al Consiliului din data de 27 aprilie 2016 privind protecția persoanelor fizice în ceea ce privește prelucrarea datelor cu caracter personal și libera circulație a acestor date (denumit în continuare &ldquo;GDPR&rdquo;).</p>
                 <p>Vă rugăm să acordați o atenție deosebită lecturării următoarei Politici (denumită în continuare &ldquo;DPP&rdquo;) pentru a înțelege modul în care vor fi tratate informațiile dumneavoastră ("date personale&rdquo;).</p>
             </article>
             <article id="contact">
@@ -294,7 +294,7 @@
             </article>
             <article id="ce-date">
               <header><h1>CE DATE PRELUCRĂM</h1></header>
-              <p>În scopul de a oferi funcționalitatea necesară funcționării site-ului și a îmbunătăți experiența utilizatorului, antimivireanul.ml folosește instrumente oferite gratuit de:</p>
+              <p>În scopul de a oferi funcționalitatea necesară funcționării site-ului și a îmbunătăți experiența utilizatorului, antimivireanul.fr folosește instrumente oferite gratuit de:</p>
                 <ol> <li> Google,</li>
                   <li>Facebook,</li>
                   <li> Github,</li>
@@ -305,8 +305,8 @@
                   <li> Yandex.</li>
                  </ol>
               <p>Fiind gratuite, aceste instrumente colectează și prelucrează implicit date cu caracter personal și oferă gratuit și contra cost access la rezultatul prelucrării datelor personale (spre exemplu sub formă de statistici).</p>
-              <p>Site-ul antimivireanul.ml nu colectează și nu prelucrează date cu caracter personal pe serverele sale.</p>
-              <p>Site-ul antimivireanul.ml nu utilizează nici un serviciu contra cost de analiză sau prelucrare de date cu caracter personal.</p>
+              <p>Site-ul antimivireanul.fr nu colectează și nu prelucrează date cu caracter personal pe serverele sale.</p>
+              <p>Site-ul antimivireanul.fr nu utilizează nici un serviciu contra cost de analiză sau prelucrare de date cu caracter personal.</p>
               <p>Ca exemplu de aplicare, site-ul animivireanul.ml cere serverelor Google Analitics printr-o setare explicită să nu colecteze adresa IP a utilizatorilor site-ului.</p>
             </article>
             <article id="pincipii">
@@ -322,40 +322,40 @@
             </article>
             <article id="divulgare-terti">
               <header><h1>DIVULGAREA DATELOR CU CARACTER PERSONAL CĂTRE TERȚI</h1></header>
-              <p>Site-ului antimivireanul.ml nu divulgă date cu caracter personal catre terți pentru ca nu colctează și nu procesează pe serverele sale astfel de date.</p>
+              <p>Site-ului antimivireanul.fr nu divulgă date cu caracter personal catre terți pentru ca nu colctează și nu procesează pe serverele sale astfel de date.</p>
             </article>
             <article id="prelucrare-terti">
               <header><h1>PRELUCRAREA DATELOR DE CĂTRE TERȚI, ALTE SITE-URI ȘI SPONSORI</h1></header>
-              <p>Site-ul antimivireanul.ml poate conține, la un moment dat, link-uri de acces către alte site-uri ale căror politici de prelucrare a datelor pot fi diferite de cele ale Parohia SAINT MARTYR ANTIM IVIREANUL.</p>
+              <p>Site-ul antimivireanul.fr poate conține, la un moment dat, link-uri de acces către alte site-uri ale căror politici de prelucrare a datelor pot fi diferite de cele ale Parohia SAINT MARTYR ANTIM IVIREANUL.</p>
               <p>Vă rugăm să aveți în vedere și să consultați politicile privind protecția datelor cu caracter personal ale celorlalte site-uri, Parohia SAINT MARTYR ANTIM IVIREANUL neasumându-și responsabilitatea cu privire la informațiile trimise sau colectate de aceste terțe părți, chiar dacă are access la analize și informații rezultate din prelucrarea datelor dumneavoastră.</p>
-              <p>Pentru o funcționare corespunzătoare site-ul antimivireanul.ml nu necesită access la prelucrarea datelor de către terți, alte site-uri sau sponsori.</p>
+              <p>Pentru o funcționare corespunzătoare site-ul antimivireanul.fr nu necesită access la prelucrarea datelor de către terți, alte site-uri sau sponsori.</p>
             </article>
             <article id="auto-cookie">
               <header><h1>PRELUCRARE AUTOMATĂ DE DATE. COOKIE</h1></header>
-              <p>Site-ul antimivireanul.ml folosește identificatori de tip Cookie. în acest sens puteți consulta <a href="https://antimivireanul.ml/privacy/cookie.html" title="Politica de cookies">Politica de cookies</a></p>, disponibilă pe site, și vă puteți exercita dreptul de a dezactiva Cookies astfel:</p>
+              <p>Site-ul antimivireanul.fr folosește identificatori de tip Cookie. în acest sens puteți consulta <a href="https://antimivireanul.fr/privacy/cookie.html" title="Politica de cookies">Politica de cookies</a></p>, disponibilă pe site, și vă puteți exercita dreptul de a dezactiva Cookies astfel:</p>
               <p style="padding-left:5em"><a href="javascript: Cookiebot.renew()">Schimba consimțământul dumneavoastră</a></p>
               <p style="padding-left:5em"><a href="javascript: Cookiebot.withdraw()">Retragere consimțământ</a></p>
             </article>
             <article id="perioada">
               <header><h1>PERIOADA STOCĂRII DATELOR</h1></header>
-              <p>Site-ul antimivireanul.ml nu păstrează pe serverele sale date pesonale ale utilizatorilor săi.</p>
-              <p>Modulele cookie furnizate de site-ul antimivireanul.ml, care sunt stocate pe computerul dumneavoastră, le setăm pentru a fi păstrate atâta timp cât este necesar pentru ca acestea să își atingă scopurile (de exemplu, pe durata unei sesiuni) și pentru o perioadă definită în conformitate cu reglementările și îndrumările locale.</p>
+              <p>Site-ul antimivireanul.fr nu păstrează pe serverele sale date pesonale ale utilizatorilor săi.</p>
+              <p>Modulele cookie furnizate de site-ul antimivireanul.fr, care sunt stocate pe computerul dumneavoastră, le setăm pentru a fi păstrate atâta timp cât este necesar pentru ca acestea să își atingă scopurile (de exemplu, pe durata unei sesiuni) și pentru o perioadă definită în conformitate cu reglementările și îndrumările locale.</p>
             </article>
             <article id="access-juridic">
               <header><h1>SOLICITĂRI JURIDICE</h1></header>
-              <p>Permitem accesul la informațiile site-ului antimivireanul.ml autorităților de reglementare sau factorilor de aplicare a legii în mod liber și fără constrângeri.</p>
+              <p>Permitem accesul la informațiile site-ului antimivireanul.fr autorităților de reglementare sau factorilor de aplicare a legii în mod liber și fără constrângeri.</p>
             </article>
             <article id="exonerare">
               <header><h1>EXONERARE DE RĂSPUNDERE</h1></header>
-              <p>Site-ul antimivireanul.ml poate conține legături către alte site-uri și/sau alte pagini web care nu sunt proprietatea Parohia SAINT MARTYR ANTIM IVIREANUL.</p>
-              <p>Site-ul antimivireanul.ml folosește tehnologii si instrumente oferite gratuit de următoarele terțe entități și care folosesc politici de confidențialitate diferite, definite în <a href="https://antimivireanul.ml/privacy/cookie.html" title="Politica de cookies">Politica de cookies</a></p>
+              <p>Site-ul antimivireanul.fr poate conține legături către alte site-uri și/sau alte pagini web care nu sunt proprietatea Parohia SAINT MARTYR ANTIM IVIREANUL.</p>
+              <p>Site-ul antimivireanul.fr folosește tehnologii si instrumente oferite gratuit de următoarele terțe entități și care folosesc politici de confidențialitate diferite, definite în <a href="https://antimivireanul.fr/privacy/cookie.html" title="Politica de cookies">Politica de cookies</a></p>
               <p>Parohia SAINT MARTYR ANTIM IVIREANUL nu își asumă nicio responsabilitate cu privire la conținutul acestor site-uri și instrumente și, prin urmare, nu va putea fi ținută răspunzătoare pentru conținutul, publicitatea, bunurile, serviciile, software-ul, informațiile sau alte materiale disponibile pe sau prin intermediul acestor site-uri. Parohia SAINT MARTYR ANTIM IVIREANUL nu va fi responsabilă de pierderea datelor cu caracter personal, de orice efecte negative asupra datelor personale ale vizitatorilor sau de alte daune morale și/ sau patrimoniale cauzate de accesul la respectivele site-uri.</p>
             </article>
             <article id="actual">
               <header><h1>ACTUALIZAREA PREZENTEI POLITICII</h1></header>
-              <p>Vă rugăm să aveți în vedere faptul că prezenta Politică poate face obiectul unor modificări periodice de conținut, prin actualizarea site-ului antimivireanul.ml.</p>
+              <p>Vă rugăm să aveți în vedere faptul că prezenta Politică poate face obiectul unor modificări periodice de conținut, prin actualizarea site-ului antimivireanul.fr.</p>
               <p>Nu vă vom anunța despre modificările aduse acestei Politici pentru că nu deținem și nu prelucrăm date personale.</p>
-              <p>Vă rugăm să nu continuați să utilizați site-ul antimivireanul.ml dacă nu sunteți de acord cu astfel de modificări. De asemenea, vă recomandăm să verificați această pagină pentru orice actualizare.</p>
+              <p>Vă rugăm să nu continuați să utilizați site-ul antimivireanul.fr dacă nu sunteți de acord cu astfel de modificări. De asemenea, vă recomandăm să verificați această pagină pentru orice actualizare.</p>
               <p>Termenii DPP se interpretează în conformitate cu legislația aplicabilă.</p>
             </article>
           </div>
